--- a/lab_8/tasks/analiza.Rmd
+++ b/lab_8/tasks/analiza.Rmd
@@ -1,3 +1,17 @@
+---
+jupyter:
+  jupytext:
+    text_representation:
+      extension: .Rmd
+      format_name: rmarkdown
+      format_version: '1.2'
+      jupytext_version: 1.3.0
+  kernelspec:
+    display_name: Python 3
+    language: python
+    name: python3
+---
+
 ```{python}
 from tools.fit_funcs import least_sq
 import numpy as np
